test-project2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-project2
spec:
  selector:
    matchLabels:
      app: test-project2-default
  replicas: 5
  template:
    spec:
      containers:
      - name: test-project2
        image: nanajanashia/argocd-app:1.2
        ports:
        - containerPort: 8080
