test-project2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-project2-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: test-project2
  type: ClusterIP
