test-project2/test-project2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: "true"
      nginx.ingress.kubernetes.io/proxy-body-size: 50m
      nginx.ingress.kubernetes.io/proxy-buffer-size: 32k
      nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
      nginx.ingress.kubernetes.io/proxy-cookie-path: |
        / "/; Secure;"
  name: test-project2-ingress
spec:
  rules:
    - host: github.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: test-project2-svc
              port:
                number: 8080
